@@ -1,3 +1,6 @@
+2024-01-06 (12.27)
+	COMMON: Allow modules to return objects with methods that take arguments
+
 2023-08-27 (12.27)
 	COMMON: Fix parameter number error when calling a unit sub/func
 	COMMON: Show a runtime error if a module calls exit()
